# hajimi

./: .env  .gitignore  Dockerfile  LICENSE  README.md  Windows双击这里运行.bat  env.ps1  pyproject.toml  readme.md  requirements.txt  roo prompt  start.py  update.md  version.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflow/: main.yml
.github/workflows/: hf-docker.yml  main.yml  upstream-sync.yml
app/: gemini.py  index.html  main.py  models.py  utils.py
app/api/: __init__.py  auth.py  client_disconnect.py  dashboard.py  gemini_handlers.py  logging_utils.py  nonstream_handlers.py  request_handlers.py  routes.py  stream_handlers.py
app/config/: __init__.py  persistence.py  safety.py  settings.py
app/models/: __init__.py  schemas.py
app/services/: OpenAI.py  __init__.py  gemini.py
app/templates/: __init__.py  index.html
app/utils/: __init__.py  api_key.py  auth.py  cache.py  error_handling.py  logging.py  maintenance.py  rate_limiting.py  request.py  response.py  stats.py  version.py
app/vertex/: __init__.py  api_helpers.py  auth.py  config.py  credentials_manager.py  main.py  message_processing.py  model_loader.py  models.py  requirements.txt  vertex.py  vertex2.py  vertex_ai_init.py
hajimiUI/: build.js  index.html  package-lock.json  package.json  vite.config.js
hajimiUI/src/: App.vue
hf/: Dockerfile
wiki/: .env  Termux.md  claw.md  docker-compose.yaml  docker.md  error.md  hf-oneclick.md  huggingface.md  huggingface2.md  update.md  vertex.md  wiki.md  zeabur.md
wiki/docker/: .env  docker-compose.yaml  (+1 more)
(+25 files in other folders)
