[project]
name = "hajimi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi>=0.115.12",
    "google-auth==2.38.0",
    "google-cloud-aiplatform==1.86.0",
    "google-genai==1.11.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai==1.76.0",
    "pydantic==2.6.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "tzdata>=2025.2",
    "uvicorn>=0.34.2",
    "xxhash>=0.8.2",
    "openai>=1.76.0",
    "tzdata",
]
